# phosphor

./: .gitignore  AUDIO-FEATURES.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  QUICK-REFERENCE.md  README.md  SECURITY.md  TECHNICAL.md  TUTORIALS.md  deny.toml
.claude/: CLAUDE.md
.githooks/: pre-commit
.github/: pull_request_template.md  release-notes-footer.md
.github/ISSUE_TEMPLATE/: bug_report.yml  effect_request.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  tag.yml
assets/effects/: accretion.pfx  array.pfx  ascend.pfx  aurora.pfx  beam.pfx  cascade.pfx  chaos.pfx  chromatica.pfx  coral.pfx  cymatics.pfx  drift.pfx  feedback_test.pfx  flux.pfx  genesis.pfx  helix.pfx  iris.pfx  lattice_445.pfx  lattice_architecture.pfx  lattice_brain.pfx  lattice_builder.pfx  lattice_chunky.pfx  lattice_clouds.pfx  lattice_coral.pfx  lattice_pulse.pfx  lattice_pyroclastic.pfx  lattice_shells.pfx  membrane.pfx  morph.pfx  murmur.pfx  murmuration.pfx  my_flux.pfx  mycelium.pfx  nova.pfx  orbital_trails.pfx  panorama.pfx  particle_test.pfx  phosphor.pfx  plasma_wave.pfx  polycephalum.pfx  prism.pfx  (+22 more)
assets/presets/: Crucible.json  Spectral Eye.json
assets/shaders/: accretion_bg.wgsl  accretion_sim.wgsl  array_bg.wgsl  array_sim.wgsl  as_sim.wgsl  ascend_bg.wgsl  ascend_sim.wgsl  aurora.wgsl  beam.wgsl  cascade_bg.wgsl  cascade_sim.wgsl  chaos_bg.wgsl  chaos_sim.wgsl  chromatica.wgsl  coral_bg.wgsl  coral_sim.wgsl  cymatics_bg.wgsl  cymatics_sim.wgsl  default.wgsl  drift.wgsl  feedback_test.wgsl  flux_bg.wgsl  flux_sim.wgsl  genesis_bg.wgsl  genesis_sim.wgsl  helix_bg.wgsl  helix_sim.wgsl  membrane.wgsl  morph_bg.wgsl  morph_sim.wgsl  murmur_bg.wgsl  murmur_sim.wgsl  murmuration_bg.wgsl  murmuration_sim.wgsl  my_flux.wgsl  my_flux_sim.wgsl  mycelium_bg.wgsl  mycelium_sim.wgsl  nova_bg.wgsl  nova_sim.wgsl  (+46 more)
assets/shaders/builtin/: blit.wgsl  bloom_blur.wgsl  bloom_extract.wgsl  composite.wgsl  compute_raster_bin.wgsl  compute_raster_clear.wgsl  compute_raster_draw.wgsl  compute_raster_resolve.wgsl  compute_raster_scatter.wgsl  compute_raster_tiled.wgsl  crossfade.wgsl  image_scatter.wgsl  lattice_display.wgsl  lattice_seed.wgsl  lattice_step.wgsl  media_blit.wgsl  (+18 more)
assets/web/: control.html
bridges/: README.md  docker-compose.yml  iphone_arkit.py  kinect_body.py  leap_motion.py  mediapipe_face.py  mediapipe_hands.py  mediapipe_pose.py  phosphor_bridge.py  realsense_depth.py  requirements-base.txt  requirements-depth.txt  requirements-gamepad.txt  requirements-vision.txt  smart_lfo.py  test_echo_server.py  xbox_controller.py  yolo_detect.py
bridges/docker/: Dockerfile.base  Dockerfile.gamepad  Dockerfile.leap  Dockerfile.realsense  Dockerfile.smart-lfo  Dockerfile.vision  Dockerfile.vision-gpu  vision_entrypoint.sh
crates/phosphor-app/: Cargo.toml
crates/phosphor-app/src/: app.rs  download.rs  main.rs  settings.rs
crates/phosphor-app/src/audio/: analyzer.rs  beat.rs  capture.rs  chroma.rs  downbeat.rs  features.rs  hpss.rs  interp.rs  key.rs  loudness.rs  mod.rs  normalizer.rs  pulse_capture.rs  ranging.rs  reconnect.rs  schema.rs  smoother.rs  stereo.rs  structure.rs  timbre.rs  wasapi_capture.rs
crates/phosphor-app/src/bindings/: bus.rs  migration.rs  mod.rs  persistence.rs  sources.rs  templates.rs  transforms.rs  types.rs
crates/phosphor-app/src/depth/: estimator.rs  mod.rs  model.rs  thread.rs
crates/phosphor-app/src/effect/: format.rs  loader.rs  mod.rs
crates/phosphor-app/src/gpu/: audio_textures.rs  compositor.rs  context.rs  frame_capture.rs  fullscreen_quad.rs  lattice.rs  layer.rs  mod.rs  pass_executor.rs  pipeline.rs  placeholder.rs  postprocess.rs  profiler.rs  render_target.rs  shader_compiler.rs  test_gpu.rs  types.rs  uniforms.rs  volumetric.rs
crates/phosphor-app/src/gpu/particle/: compute_raster.rs  emitter.rs  flow_field.rs  image_source.rs  mod.rs  morph.rs  obstacle.rs  source_loader.rs  spatial_hash.rs  splat.rs  splat_sort.rs  splat_source.rs  sprite.rs  symbiosis.rs  system.rs  text_source.rs  types.rs
crates/phosphor-app/src/media/: decoder.rs  mod.rs  types.rs  video.rs  webcam.rs  webcam_ffmpeg.rs
crates/phosphor-app/src/midi/: clock.rs  input.rs  mapping.rs  mod.rs  types.rs
crates/phosphor-app/src/ndi/: capture.rs  ffi.rs  mod.rs  sender.rs  types.rs
crates/phosphor-app/src/osc/: mod.rs  receiver.rs  sender.rs  types.rs
crates/phosphor-app/src/params/: mod.rs  store.rs  types.rs
crates/phosphor-app/src/preset/: loader.rs  mod.rs  store.rs
crates/phosphor-app/src/recording/: encoder.rs  mod.rs  types.rs
crates/phosphor-app/src/scene/: mod.rs  store.rs  timeline.rs  transition.rs  types.rs
crates/phosphor-app/src/shader/: compiler.rs  hot_reload.rs  mod.rs
crates/phosphor-app/src/ui/: mod.rs  overlay.rs  widgets.rs
crates/phosphor-app/src/ui/accessibility/: focus.rs  keyboard.rs  mod.rs  motion.rs
crates/phosphor-app/src/ui/panels/: audio_mappings_panel.rs  audio_panel.rs  binding_helpers.rs  binding_matrix.rs  bindings_panel.rs  effect_panel.rs  lattice_panel.rs  layer_panel.rs  media_panel.rs  midi_panel.rs  mod.rs  ndi_panel.rs  obstacle_panel.rs  osc_panel.rs  param_panel.rs  particle_panel.rs  postfx_panel.rs  preset_panel.rs  recording_panel.rs  scene_panel.rs  settings_panel.rs  shader_editor.rs  status_bar.rs  timeline_bar.rs  triggers_panel.rs  volumetric_panel.rs  web_panel.rs  webcam_panel.rs
crates/phosphor-app/src/ui/theme/: colors.rs  dark.rs  light.rs  mod.rs  tokens.rs
crates/phosphor-app/src/ui/widgets/: mod.rs  rows.rs
crates/phosphor-app/src/web/: client.rs  mod.rs  server.rs  state.rs  types.rs
docs/: AUDIO-FEATURES.md  CREDITS.md  GALLERY.md  QUICK-REFERENCE.md  README.md  TUTORIALS.md
packaging/icon/: generate_icns.sh
packaging/macos/: Info.plist  entitlements.plist
patches/midir/: Cargo.toml
scripts/: check_changelog.py  check_docs.py  gen_gallery.py
scripts/capture/: _capture_lib.sh  build_media.sh  capture.sh  capture_advanced.sh  check_demos.py  find_canvas.py  make_loop.py  ui_shot.sh
(+19 files in other folders)
