[workspace]
members = ["crates/phosphor-app"]
resolver = "3"

# Patch midir to allow alsa 0.11 (needed for cpal 0.17.3 compatibility on Linux).
# midir only uses alsa::seq (sequencer) APIs which are stable across 0.9-0.11.
# Remove this patch when midir publishes a version with alsa 0.11 support.
[patch.crates-io]
midir = { path = "patches/midir" }
