[package]
name = "phosphor-app"
version = "0.3.11"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"

[dependencies]
# GPU
wgpu = "27"
# Windowing
winit = "0.30"
# UI
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
# Audio
cpal = "0.17.3"
# FFT
rustfft = "6"
# File watching
notify = "8"
notify-debouncer-mini = "0.6"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Logging
log = "0.4"
env_logger = "0.11"
# Error handling
anyhow = "1"
thiserror = "2"
# Lock-free channels
crossbeam-channel = "0.5"
# GPU uniform packing
bytemuck = { version = "1", features = ["derive"] }
# Block on async (wgpu init)
pollster = "0.4"
# System theme detection
dark-light = "2"
# MIDI input
midir = "0.10"
# OSC input/output
rosc = "0.11"
# XDG config paths
dirs = "6"
# WebSocket server
tungstenite = "0.28"
# Image loading (particle sprites, media layers)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
# WebP animation decoding (image crate only decodes first frame)
image-webp = "0.2"
# GIF decoding (animated GIF frame extraction)
gif = "0.13"
# Native file dialogs
rfd = "0.15"
# Linear algebra (camera, projection)
glam = "0.29"
# Code editor widget (shader editor)
egui_code_editor = "0.2"
# Dynamic library loading (NDI runtime, PulseAudio runtime on Linux)
libloading = "0.8"
# Webcam capture
nokhwa = { version = "0.10", features = ["input-native"], optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
video = []
ndi = []
webcam = ["nokhwa"]
