[package]
name = "phosphor-app"
version = "1.7.1"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
description = "Real-time audio-reactive particle and shader engine for live performance"
repository = "https://github.com/kevinraymond/phosphor"
readme = "../../README.md"
publish = false

[dependencies]
# GPU
wgpu = "27"
# Windowing
winit = "0.30"
# UI
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
# Audio
cpal = "0.17.3"
# FFT
rustfft = "6"
# File watching
notify = "8"
notify-debouncer-mini = "0.6"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Logging
log = "0.4"
env_logger = "0.11"
# Error handling
anyhow = "1"
thiserror = "2"
# Lock-free channels
crossbeam-channel = "0.5"
# GPU uniform packing
bytemuck = { version = "1", features = ["derive"] }
# Block on async (wgpu init)
pollster = "0.4"
# System theme detection
dark-light = "2"
# MIDI input
midir = "0.10"
# OSC input/output
rosc = "0.11"
# XDG config paths
dirs = "6"
# WebSocket server
tungstenite = "0.28"
# Image loading (particle sprites, media layers)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
# WebP animation decoding (image crate only decodes first frame)
image-webp = "0.2"
# GIF decoding (animated GIF frame extraction)
gif = "0.13"
# Native file dialogs
rfd = "0.15"
# Linear algebra (camera, projection)
glam = "0.29"
# Code editor widget (shader editor)
egui_code_editor = "0.2"
# Dynamic library loading (NDI runtime, PulseAudio runtime on Linux)
libloading = "0.8"
# Webcam capture
nokhwa = { version = "0.10", features = ["input-native"], optional = true }
# ONNX Runtime for depth estimation (MiDaS) — load-dynamic: runtime dylib loading, no build-time linking
ort = { version = "=2.0.0-rc.11", optional = true, default-features = false, features = ["load-dynamic"] }
# HTTP client for model + runtime download
ureq = { version = "3", features = ["native-tls"], optional = true }
# Archive extraction for ONNX Runtime download (tgz on Linux/macOS, zip on Windows)
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }
rustc-hash = "2.1.1"
fontdue = "0.9"
wgpu-profiler = { version = "0.25", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Media_Audio",
    "Win32_Media_Multimedia",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell_PropertiesSystem",
] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[features]
default = []
video = []
ndi = []
webcam = ["nokhwa"]
depth = ["ort", "ureq", "flate2", "tar", "zip"]
profiling = ["wgpu-profiler"]
wgpu-profiler = ["dep:wgpu-profiler"]
